--- a/mi-biografia/index.html
+++ b/mi-biografia/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Pagina Web</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main class="contenido">
